# threeB

./: .gitignore  CHANGES-1.2  CREDITS  ClassicGlow.java  Doxyfile  LoadTestData.java  Makefile.in  QuickPalmLoader.java  README  README.md  TODO  ThreeBHelp.java  ThreeBLoader.java  build_3b.sh  build_and_install.sh  build_plugin.sh  configure  configure.ac  conjugate_gradient_only.h  debug.cc  debug.h  documentation.h  drift.h  forward_algorithm.h  forward_filtering_backwards_sampling.cc  get_all_spots.awk  header.txt  make.inc.rej  make_grid_markup.cc  make_simulation.cc  makedist.sh  mt19937.h  multispot5.cc  multispot5.cfg  multispot5.h  multispot5_gui.cc  multispot5_headless.cc  multispot5_jni.cc  multispot5_place_choice.cc  multispot5_place_choice.h  (+22 more)
docker/: Dockerfile  clapack-make-linux.patch  clapack_mingw.patch  libpng-1.6.18.tar.xz
jar/: about.txt  instructions.html  multispot5.cfg  plugins.config  test_data.tif
